# khipu

./: .flatpak-manifest.json  .kde-ci.yml  AUTHORS  CMakeLists.txt  Messages.sh  README  extract-messages.sh  khipu.kdev4  khipu.knsrc  org.kde.khipu.json
doc/: CMakeLists.txt  index.docbook
keomath/: CMakeLists.txt  keomathexport.h  mathhelper.cpp  mathhelper.h
keomath/function/: function.cpp  function.h  functiondelegate.cpp  functiondelegate.h  functioneditor.cpp  functioneditor.h  functioneditorwidget.ui  functionlibraryedit.cpp  functionlibraryedit.h  functionlibrarymodel.h  functionsmodel.cpp  functionsmodel.h  functionsview.cpp  functionsview.h
keomath/solvers/: solver.cpp  solver.h  solverfactory.cpp  solverfactory.h
keomath/solvers/solvers2d/: cartesiancurve.cpp  implicitcurve.cpp  parametriccurve2d.cpp  polarcurve.cpp
keomath/solvers/solvers3d/: cartesiansurface.cpp  cylindricalsurface.cpp  implicitsurface.cpp  parametriccurve3d.cpp  parametricsurface.cpp  sphericalsurface.cpp
keomath/solvers/solvers3d/MarchingCubes/: ctab.cpp  ctab.h  formulas.h  glwidget.cpp  glwidget.h  marchingcubes.cpp  marchingcubes.h  octree.cpp  octree.h  qtlogo.cpp  qtlogo.h
keomath/space/: space.cpp  space.h  spacesmodel.cpp  spacesmodel.h  spacesview.cpp  spacesview.h
keomath/viewers/: view2d.cpp  view2d.h  view3d.cpp  view3d.h  viewer2d.cpp  viewer2d.h  viewer2dwidget.ui  viewer3d.cpp  viewer3d.h  viewer3dwidget.ui
keomath/widgets/: button.cpp  button.h
misc/: CMakeLists.txt
misc/data/: CMakeLists.txt
misc/desktop/: CMakeLists.txt  gplacs.desktop  khipu.desktop  khipu.qrc  khipu.rc  org.kde.khipu.appdata.xml  org.kde.khipu.desktop
misc/icons/: CMakeLists.txt
misc/icons/actions/: CMakeLists.txt  hisc-action-add-space2d.svgz  hisc-action-constant-e.svgz  hisc-action-constant-sqrt2.svgz  hisc-action-coord-settings.svgz  hisc-action-newcylindrical.svgz  hisc-action-newparametric3d.svgz  hisc-action-newspherical.svgz  hisc-action-operator-sqrt.svgz  hisc-action-sphere.svgz  hisc-action-torus.svgz  hisc-actions-add-space3d.svgz  hisc-actions-chair-surface.svgz  hisc-actions-constant-pi.svgz  hisc-actions-constant-sqrt3.svgz  hisc-actions-disc.svgz  hisc-actions-newfunction3d.svgz
misc/icons/app/: CMakeLists.txt
misc/pics/: CMakeLists.txt
po/: CMakeLists.txt  gplacs.pot
po/ar/: khipu.po
po/ast/: khipu.po
po/bs/: khipu.po
po/ca/: khipu.po
po/ca/docs/khipu/: index.docbook
po/ca@valencia/: khipu.po
po/cs/: khipu.po
po/de/: khipu.po
po/de/docs/khipu/: index.docbook
po/en_GB/: khipu.po
po/eo/: khipu.po
po/es/: CMakeLists.txt  gplacs.po  khipu.po
po/et/: khipu.po
po/fi/: khipu.po
po/fr/: khipu.po
po/ga/: khipu.po
po/gl/: khipu.po
po/he/: khipu.po
po/hu/: khipu.po
po/it/: khipu.po
po/it/docs/khipu/: index.docbook
po/ja/: khipu.po
po/ka/: khipu.po
po/ko/: khipu.po
po/lt/: khipu.po
po/mr/: khipu.po
po/nl/: khipu.po
po/nl/docs/khipu/: index.docbook
po/pl/: khipu.po
po/pt/: khipu.po
po/pt_BR/: khipu.po
po/pt_BR/docs/khipu/: index.docbook
po/ru/: khipu.po
po/sk/: khipu.po
po/sl/: khipu.po
po/sl/docs/khipu/: index.docbook
po/sv/: khipu.po
po/sv/docs/khipu/: index.docbook
po/tr/: khipu.po
po/ug/: khipu.po
po/uk/: khipu.po
po/uk/docs/khipu/: index.docbook
po/zh_CN/: khipu.po
po/zh_TW/: khipu.po
src/: CMakeLists.txt  button.h  dashboard.cpp  dashboard.h  dashboard.ui  dashboardwidget.ui  datastore.cpp  datastore.h  dictionariesmodel.cpp  dictionariesmodel.h  dictionariesviewer.cpp  dictionariesviewer.h  dictionariesviewer.ui  dictionarycollection.cpp  dictionarycollection.h  dictionarycollection.ui  dictionaryitem.cpp  dictionaryitem.h  document.cpp  document.h  filter.cpp  filter.h  filter.ui  functiondelegate.cpp  functiondelegate.h  functioneditor.cpp  functioneditor.h  functioneditorwidget.ui  functionlibraryedit.cpp  functionlibraryedit.h  functionlibrarymodel.cpp  functionlibrarymodel.h  functionsmodel.cpp  functionsmodel.h  functionsview.cpp  functionsview.h  gplacs.cpp  gplacswidget.cpp  gplacswidget.h  main.cpp  (+40 more)
src/app/: gplacs.cpp  gplacs.h  main.cpp
src/widgets/: dashboard.cpp  dashboardwidget.ui  gplacswidget.cpp
tests/: CMakeLists.txt  datastoretest.cpp  datastoretest.h  dictionarycollectiontest.cpp  dictionarycollectiontest.h  persistancefiletest.cpp  persistancefiletest.h
