install ( FILES splash.png DESTINATION  ${DATA_INSTALL_DIR}/khipu/pics )

install ( FILES info-cartesian-curves.png DESTINATION  ${DATA_INSTALL_DIR}/khipu/pics )
install ( FILES info-polar-curves.png DESTINATION  ${DATA_INSTALL_DIR}/khipu/pics )
install ( FILES info-parametric2d-curves.png DESTINATION  ${DATA_INSTALL_DIR}/khipu/pics )

install ( FILES info-cartesian-surfaces.png DESTINATION  ${DATA_INSTALL_DIR}/khipu/pics )
install ( FILES info-cylindrical-surfaces.png DESTINATION  ${DATA_INSTALL_DIR}/khipu/pics )
install ( FILES info-spherical-surfaces.png DESTINATION  ${DATA_INSTALL_DIR}/khipu/pics )
install ( FILES info-parametric-surfaces.png DESTINATION  ${DATA_INSTALL_DIR}/khipu/pics )
install ( FILES info-parametric3d-curves.png DESTINATION  ${DATA_INSTALL_DIR}/khipu/pics )
