install ( FILES splash.png DESTINATION  ${KDE_INSTALL_DATADIR}/khipu/pics )

install ( FILES info-cartesian-curves.png DESTINATION  ${KDE_INSTALL_DATADIR}/khipu/pics )
install ( FILES info-polar-curves.png DESTINATION  ${KDE_INSTALL_DATADIR}/khipu/pics )
install ( FILES info-parametric2d-curves.png DESTINATION  ${KDE_INSTALL_DATADIR}/khipu/pics )

install ( FILES info-cartesian-surfaces.png DESTINATION  ${KDE_INSTALL_DATADIR}/khipu/pics )
install ( FILES info-cylindrical-surfaces.png DESTINATION  ${KDE_INSTALL_DATADIR}/khipu/pics )
install ( FILES info-spherical-surfaces.png DESTINATION  ${KDE_INSTALL_DATADIR}/khipu/pics )
install ( FILES info-parametric-surfaces.png DESTINATION  ${KDE_INSTALL_DATADIR}/khipu/pics )
install ( FILES info-parametric3d-curves.png DESTINATION  ${KDE_INSTALL_DATADIR}/khipu/pics )
